--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,26 @@
 {
   "env": {
     "mocha": true,
-    "es6": true
+    "es6": true,
+    "cypress/globals": true
   },
   "globals": {
     "expect": true,
     "sinon": true
   },
-  "plugins": ["import", "node", "promise", "standard", "vue"],
-  "extends": ["standard", "plugin:vue/recommended"],
+  "plugins": [
+    "import",
+    "node",
+    "promise",
+    "standard",
+    "vue",
+    "cypress"
+  ],
+  "extends": [
+    "standard",
+    "plugin:vue/recommended",
+    "plugin:cypress/recommended"
+  ],
   "rules": {
      "no-tabs": ["warn"]
     // 禁止特定的全局变量
