--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "xxxily",
   "scripts": {
     "cypress:open": "cypress open",
+    "test:summary": "npx nyc report --reporter=text-summary && npx nyc report",
     "rollup": "rollup -w -c config/rollup.config.js",
     "myscript:prod": "npm run rollup --mode-dev --proj-myscript",
     "server": "node bin/staticService/index.js"
@@ -17,9 +18,11 @@
     "@babel/core": "^7.6.0",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.6.0",
+    "@cypress/code-coverage": "^3.8.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "chokidar": "^3.3.1",
     "copy-webpack-plugin": "^6.2.1",
@@ -43,9 +46,11 @@
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^4.2.0",
+    "istanbul-lib-coverage": "^3.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "morgan": "^1.10.0",
     "node-sass": "^4.13.1",
+    "nyc": "^15.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "rollup": "^2.32.1",
     "rollup-plugin-alias": "^2.0.0",
