--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "server": "node bin/staticService/index.js"
   },
   "dependencies": {
+    "local-storage-proxy": "^4.0.3",
     "localforage": "^1.9.0",
     "vue": "^2.6.11"
   },
