--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "myscript02:prod": "npm run rollup --mode-dev --proj-myscript02",
     "myscript:prod": "npm run rollup --mode-dev --proj-myscript",
     "quicklink:prod": "npm run rollup --mode-dev --proj-quicklink",
+    "webrecord:prod": "npm run rollup --mode-dev --proj-webrecord",
     "sw:prod": "npm run rollup --mode-dev --proj-sw",
     "server": "node bin/staticService/index.js"
   },
