--- a/package.json
+++ b/package.json
@@ -83,5 +83,9 @@
   "engines": {
     "node": ">= 10.0.0",
     "npm": ">= 6.0.0"
+  },
+  "volta": {
+    "node": "12.22.12",
+    "yarn": "1.22.21"
   }
 }
